--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -6,6 +6,6 @@ xdebug.client_port = 9003
 xdebug.start_with_request = yes
 xdebug.idekey = PHPSTORM
 xdebug.log_level = 1
-xdebug.log = /app/xdebug.log
+xdebug.log = /app/log/xdebug.log
 xdebug.discover_client_host = 1
 xdebug.mode = develop,debug
