--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,18 @@
 {
     "require": {
+        "php": "^8.2",
         "php-amqplib/php-amqplib": "^3.5",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "nikic/fast-route": "^1.3",
+        "ext-pdo": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app"
+        }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.4",
+        "laravel/pint": "^1.13"
     }
 }
