--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "php-amqplib/php-amqplib": "^3.5",
         "vlucas/phpdotenv": "^5.5",
         "nikic/fast-route": "^1.3",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-4": {
