--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "vlucas/phpdotenv": "^5.5",
         "nikic/fast-route": "^1.3",
         "ext-pdo": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-pcntl": "*"
     },
     "autoload": {
         "psr-4": {
