--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,6 @@ services:
       TZ: ${TIMEZONE}
       DEBIAN_FRONTEND: noninteractive
     volumes:
-      - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
       - db_data:/var/lib/mariadb
     ports:
       - 127.0.0.1:${DOCKER_DB_PORT}:3306
@@ -89,11 +88,10 @@ services:
 
   rabbitmq:
     platform: ${BUILDPLATFORM}
-    image: "rabbitmq:3.11.11-management"
-    hostname: rabbitmq
+    build:
+      context: .
+      dockerfile: docker/rabbitmq/Dockerfile
     volumes:
-      - ./docker/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
-      - ./docker/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json:ro
       - rabbitmq_data:/var/lib/rabbitmq
     labels:
       traefik.enable: "true"
