[wip] добавление инструкции и rabbitMq отправки/получение данных

--- a/.env-dist
+++ b/.env-dist
@@ -20,6 +20,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 # Queues
 # ----
 QUEUE_DSN=amqp://guest:guest@rabbitmq:5672/kma
+QUEUE_NAME=kma
 
 # Databases
 # ---------
@@ -31,4 +32,7 @@ DB_TABLE_PREFIX=
 DB_CHARSET=utf8mb4
 DB_ROOT_PASSWORD=root
 
-RESTART=
+RESTART=always
+
+#text file
+URLS_FILE=urls.txt
